wxc/include/ewxw/wxc_glue.h

/* ELJTextValidator */
TClassDefExtend(ELJTextValidator,wxTextValidator)
TClass(ELJTextValidator) ELJTextValidator_Create( void* _obj, void* _fnc, TStringVoid _txt, int _stl );
int        wxTextValidator_GetExcludeList( TSelf(wxTextValidator) _obj, void* _ref );
int        wxTextValidator_GetStyle( TSelf(wxTextValidator) _obj );
void       wxTextValidator_OnChar( TSelf(wxTextValidator) _obj, TClass(wxEvent) event );
void       wxTextValidator_SetStyle( TSelf(wxTextValidator) _obj, int style );
/* wxValidator */
TClassDefExtend(wxValidator,wxEvtHandler)
TClass(wxValidator) wxValidator_Create(  );
void       wxValidator_Delete( TSelf(wxValidator) _obj );
TClass(wxWindow) wxValidator_GetWindow( TSelf(wxValidator) _obj );
TBool      wxValidator_IsSilent(  );
void       wxValidator_SetBellOnError( TBool doIt );
void       wxValidator_SetWindow( TSelf(wxValidator) _obj, TClass(wxWindow) win );
int        wxValidator_TransferFromWindow( TSelf(wxValidator) _obj );
int        wxValidator_TransferToWindow( TSelf(wxValidator) _obj );
TBool      wxValidator_Validate( TSelf(wxValidator) _obj, TClass(wxWindow) parent );